# myduckie

./: BUGFIX_SUMMARY.md  CONTAINER_COMMANDS.md  DUCKIEBOT_DEPLOYMENT.md  LANE_FOLLOWING_README.md  PHASE3_ROADMAP.md  PROJECT_ROADMAP.md  README.md  SYSTEM_OVERVIEW.md  TESTING_GUIDE.md  ULTRA_ADVANCED_LANE_FOLLOWING_README.md  YOLO_DEPLOYMENT_GUIDE.md  run_apriltag_system.sh  run_basic_working_system.sh  run_enhanced_lane_following.sh  run_lane_following.sh  run_object_detection.sh  run_ultra_advanced_lane_following.sh  run_yolo_system.sh  setup_yolo_duckietown.sh  test_lane_detection_fix.py  test_mpc_controller.py  test_ultra_advanced_system.sh
devel/: .catkin
devel/include/duckietown_msgs/: BoolStamped.h  CarControl.h  FSMState.h  LanePose.h  Pose2DStamped.h  Twist2DStamped.h  WheelsCmdStamped.h
devel/lib/object_follower/: enhanced_object_detector.py  image_viewer.py  motor_controller.py  test_system.py
devel/lib/pkgconfig/: duckietown_msgs.pc  object_follower.pc
devel/lib/python3/dist-packages/duckietown_msgs/msg/: __init__.py
devel/share/duckietown_msgs/cmake/: duckietown_msgs-msg-paths.cmake  duckietown_msgsConfig.cmake
devel/share/gennodejs/ros/duckietown_msgs/msg/: _index.js
devel/share/object_follower/cmake/: object_followerConfig.cmake
devel/share/roseus/ros/duckietown_msgs/: manifest.l
server/: server.py  test_api.py
src/duckietown_msgs/: CMakeLists.txt  package.xml
src/lane_follower/: CMakeLists.txt  package.xml
src/lane_follower/launch/: advanced_lane_following.launch  basic_working_lane_following.launch  enhanced_lane_following.launch  ultra_advanced_lane_following.launch  ultra_advanced_lane_following_standalone.launch
src/lane_follower/scripts/: adaptive_learning_system.py  advanced_lane_controller.py  advanced_lane_detector.py  cmd_mux.py  enhanced_lane_controller.py  lane_comparator.py  lane_debug_system.py  lane_mux.py  lane_obstacle_detector.py  lane_performance_monitor.py  lane_system_monitor.py  mpc_lane_controller.py  neural_lane_detector.py  sensor_fusion_system.py
src/myapriltags/: CMakeLists.txt  README.md  package.xml
src/myapriltags/launch/: apriltag_detection.launch  apriltag_system.launch  apriltag_with_lane_following.launch
src/myapriltags/scripts/: apriltag_controller.py  apriltag_detector.py  apriltag_lane_integration.py
src/object_follower/: CMakeLists.txt  package.xml
src/object_follower/launch/: duckiebot_deployment.launch  duckiebot_follower.launch  duckiebot_following_mode.launch  object_follower.launch  phase2_enhanced.launch  phase3_cnn.launch
src/object_follower/scripts/: camera_simulator.py  cnn_object_detector.py  cnn_performance_monitor.py  debug_system.py  detector_tester.py  duckiebot_camera_debug.py  duckiebot_checker.py  enhanced_motor_controller.py  enhanced_object_detector.py  image_viewer.py  object_detector.py  obstacle_detector.py  start_duckiebot_camera.sh
src/yolov8/: CMakeLists.txt  README.md  package.xml
src/yolov8/launch/: yolo_system.launch
src/yolov8/scripts/: avoidance_controller.py  distance_calculator.py  emergency_recovery.py  model_manager.py  safety_monitor.py  train_duckietown_model.py  yolo_client.py  yolo_detector.py
